assignment 1 key (docx and R files)

--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -164,7 +164,7 @@ pre code {
 
 
 <h1 class="title toc-ignore">EDUC 641 Assignment 1</h1>
-<h3 class="subtitle">Categorical Data Structure and Descriptives</h3>
+<h3 class="subtitle">(Categorical Data Structure and Descriptives)</h3>
 
 </div>
 
@@ -219,13 +219,13 @@ pre code {
 </div>
 <div id="understand-the-structure-of-the-data" class="section level4">
 <h4>2. Understand the structure of the data</h4>
-<p>2.1. Write your own code to view the dataset and write 3-4 sentences about the structure of the data (how many variables are there, what type is each variable, how many rows/observations, etc.) with a focus on the two key variables, <em>treat</em> and <em>absenteeism</em> (type, observations, etc.).</p>
+<p>2.1. Write your own code to view the dataset and write 3-4 sentences about the structure of the data (how many variables are there, what is the current type of each variable and what the type should be, how many rows/observations, etc.).</p>
 <p>2.2. Write your own code to transform the variables, <em>treat</em>, <em>absenteeism</em>, and <em>cgender</em> into factor and label them consistently with the data background information above.</p>
 </div>
 <div id="describe-and-summarize-the-two-key-variables" class="section level4">
 <h4>3. Describe and summarize the two key variables</h4>
 <p>3.1. How many students were in the treatment group? Control group? Provide your response and create a table AND a figure to demonstrate your answer. <em>Make sure to label all parts of your figure</em></p>
-<p>3.2. How many <strong>and what proportion</strong> of students were chronically absent? Provide your response and create a table AND a figure to demonstrate your answer. Does this seem like a large or small proportion? <em>Make sure to label all parts of your figure</em></p>
+<p>3.2. What proportion of students were chronically absent? Provide your response and create a table AND a figure to demonstrate your answer. Does this seem like a large or small proportion? <em>Make sure to label all parts of your figure</em></p>
 </div>
 </div>
 
