--- a/assignments/assignment03.html
+++ b/assignments/assignment03.html
@@ -164,7 +164,7 @@ pre code {
 
 
 <h1 class="title toc-ignore">EDUC 641 Assignment 3</h1>
-<h3 class="subtitle">Summarizing and Displaying Continuous Data</h3>
+<h3 class="subtitle">(Summarizing and Displaying Continuous Data)</h3>
 
 </div>
 
