--- a/schedule.html
+++ b/schedule.html
@@ -357,13 +357,18 @@ $(document).ready(function () {
 </ul></li>
 </ul>
 <p>Readings: TBD</p>
+<p>Lecture slides:</p>
+<ul>
+<li>Slides:</li>
+<li>Data:</li>
+<li>R script:</li>
+</ul>
 <p>Assignment 3:</p>
 <ul>
 <li>Due TBD</li>
 <li><a href="./assignments/assignment03.html">html file</a></li>
-<li><a href="./data/cont.csv">cont.csv</a></li>
+<li><a href="./data/cont.csv">cont.csv dataset</a></li>
 </ul>
-<p>Lecture slides:</p>
 </div>
 <div id="weeks-7---9" class="section level3">
 <h3>Weeks 7 - 9</h3>
