assign 1 and 3 key (word & R)

--- a/assignments.html
+++ b/assignments.html
@@ -326,6 +326,7 @@ $(document).ready(function () {
 </ul>
 <p>Deadline: TBD</p>
 <p>Download: <a href="./assignments/assignment03.html">html file</a>; <a href="./data/cont.csv">cont.csv dataset</a></p>
+<p>Key: <a href="./assignments/keys/assignment03_key.docx">doc file</a>; <a href="./assignments/keys/assignment03_key.R">R script</a></p>
 </div>
 <div id="assignment-4" class="section level4">
 <h4>3.4. Assignment 4</h4>
