--- a/assignments/assignment03.html
+++ b/assignments/assignment03.html
@@ -234,6 +234,8 @@ pre code {
 <p>3.1.2. What are the statistical meanings of this new plot?</p>
 <p>3.1.3. Compare these two distributions and interpret what you have observed.</p>
 <p>3.1.4. Despite whether <em>vocabulary</em> is normally distributed, you wand to assume normal distribution in your future analysis. At this point, please specify your null hypothesis and (2-tailed) alternative hypothesis for the single-samle t-test.</p>
+<p>3.2 One-sample t-test</p>
+<p>3.2.1 To test whether your null hypothesis is true, run a</p>
 </div>
 </div>
 
