--- a/schedule.html
+++ b/schedule.html
@@ -367,7 +367,7 @@ $(document).ready(function () {
 <ul>
 <li>Due TBD</li>
 <li><a href="./assignments/assignment03.html">html file</a></li>
-<li><a href="./data/cont.csv">cont.csv dataset</a></li>
+<li>[cont.csv dataset (./data/cont.csv)</li>
 </ul>
 </div>
 <div id="weeks-7---9" class="section level3">
