assignment 4 (keys are not done yet)

--- a/assignments.html
+++ b/assignments.html
@@ -315,6 +315,7 @@ $(document).ready(function () {
 </ul>
 <p>Deadline: TBD</p>
 <p>Download: <a href="./assignments/assignment02.html">html file</a>; <a href="./data/cat.csv">cat.csv dataset</a></p>
+<p>Key: <a href="./assignments/keys/assignment02_key.docx">doc file</a>; <a href="./assignments/keys/assignment02_key.R">R script</a></p>
 </div>
 <div id="assignment-3" class="section level4">
 <h4>3.3. Assignment 3</h4>
@@ -331,10 +332,16 @@ $(document).ready(function () {
 <div id="assignment-4" class="section level4">
 <h4>3.4. Assignment 4</h4>
 <p>Continuous data 2: intro to bivariate regression</p>
+<p>Deadline: TBD</p>
+<p>Download: <a href="./assignments/assignment04.html">html file</a>; <a href="./data/cont.csv">cont.csv dataset</a></p>
+<p>Key: <a href="./assignments/keys/assignment04_key.docx">doc file</a>; <a href="./assignments/keys/assignment04_key.R">R script</a></p>
 </div>
 <div id="assignment-5" class="section level4">
 <h4>3.5. Assignment 5</h4>
 <p>Final assignment</p>
+<p>Deadline: TBD</p>
+<p>Download: <a href="./assignments/assignment05.html">html file</a>; <a href="./data/cont.csv">cont.csv dataset</a></p>
+<p>Key: <a href="./assignments/keys/assignment05_key.docx">doc file</a>; <a href="./assignments/keys/assignment05_key.R">R script</a></p>
 </div>
 </div>
 
