--- a/schedule.html
+++ b/schedule.html
@@ -374,8 +374,35 @@ $(document).ready(function () {
 <h3>Weeks 7 - 9</h3>
 <p>Topic: Describing relationships between continuous data</p>
 <p>Readings: TBD</p>
-<p>Assignment 4: Due TBD; <a href="./assignments/assignment04.html">html file</a>, <a href="./data/cont.csv">cont.csv</a></p>
 <p>Lecture slides:</p>
+<ul>
+<li>Slides:</li>
+<li>Data:</li>
+<li>R script:</li>
+</ul>
+<p>Assignment 4:</p>
+<ul>
+<li>Due TBD</li>
+<li><a href="./assignments/assignment04.html">html file</a></li>
+<li>[cont.csv dataset (./data/cont.csv)</li>
+</ul>
+</div>
+<div id="weeks-9-10" class="section level3">
+<h3>Weeks 9-10</h3>
+<p>Topic:</p>
+<p>Readings: TBD</p>
+<p>Lecture slides:</p>
+<ul>
+<li>Slides:</li>
+<li>Data:</li>
+<li>R script:</li>
+</ul>
+<p>Assignment 5:</p>
+<ul>
+<li>Due TBD</li>
+<li><a href="./assignments/assignment05.html">html file</a></li>
+<li>[cont.csv dataset ()</li>
+</ul>
 </div>
 
 
